<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity$PlaceholderFragment"
    android:id="@+id/background_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!-- LOGO -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo3_white_600px"/>

    <!-- in the vertical layout, space the items automatically -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:orientation="vertical"
        android:weightSum="4.5"
        android:gravity="center_horizontal">

        <!-- Paragraph 1 -->
        <TextView
            android:id="@+id/tv_para_1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/label_paragraph_one"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:gravity="center_vertical|center_horizontal" />

        <!-- Paragraph 2 -->
        <TextView
            android:id="@+id/tv_para_2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/label_paragraph_two"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center_vertical|center_horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal">

            <!-- Link phone number -->
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_phone_number"
                android:autoLink="phone"
                android:textSize="16sp"/>

            <!-- Link email -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_email"
                android:layout_marginTop="5dp"
                android:autoLink="email"
                android:textSize="16sp"/>

            <!-- Link website -->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_website"
                android:layout_marginTop="5dp"
                android:autoLink="web"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal">

            <!-- Paragraph 3 -->
            <TextView
                android:id="@+id/tv_para_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_paragraph_three"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center_vertical|center_horizontal" />

            <!-- Link modules -->
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/link_website_modules"
                android:autoLink="web"
                android:textSize="16sp"
                android:gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
