<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity$PlaceholderFragment"
    android:id="@+id/background_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!-- LOGO -->
    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo3_white"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@null"/>

    <!-- IMAGES: Ambient light, User1, User2 -->
    <RelativeLayout
        android:id="@+id/layout_user_feedback_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_logo"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <View
            android:id="@+id/view_ambient"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/shape_square_ambient"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tv_user1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/shape_green_rectangle"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/label_user_one"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_user2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/shape_green_rectangle"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/label_user_two"
            android:gravity="center"/>

    </RelativeLayout>

    <!-- TEXT: Ambient Light, mV -->
    <LinearLayout
        android:id="@+id/layout_user_feedback_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layout_user_feedback_images"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_ambient_light"
            android:textColor="@android:color/white"
            android:textSize="10pt"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/textview_ambient_millivolt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 mV"
            android:textColor="@android:color/white"
            android:textSize="10pt"/>

    </LinearLayout>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_user_feedback_labels"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@android:color/white"/>

    <!-- Indeterminate Progress Bar -->
    <RelativeLayout
        android:id="@+id/layout_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_background_white_stroked"
        android:visibility="gone">

        <TextView
            android:id="@+id/textview_searching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_searching"
            android:textSize="12pt"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/textview_searching"
            android:indeterminate="true"/>

    </RelativeLayout>

</RelativeLayout>
